# lapacke

./: .gitmodules  Cargo.toml  LICENSE.md  README.md
src/: lapacke-sys.rs  lib.rs
