[package]
name = "lapacke"
version = "0.0.1"
license = "Apache-2.0/MIT"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
description = "The package provides wrappers for LAPACKE."
documentation = "https://docs.rs/lapacke"
homepage = "https://github.com/stainless-steel/lapacke"
repository = "https://github.com/stainless-steel/lapacke"
readme = "README.md"
categories = ["api-bindings", "science"]
keywords = ["linear-algebra"]

[dependencies]
lapacke-sys = "0.1"
libc = "0.2"
num-complex = { version = "0.1", default-features = false }
