[package]
name = "lapacke"
version = "0.2.0"
license = "Apache-2.0/MIT"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
description = "The package provides wrappers for LAPACKE (C)."
documentation = "https://docs.rs/lapacke"
homepage = "https://github.com/blas-lapack-rs/lapacke"
repository = "https://github.com/blas-lapack-rs/lapacke"
readme = "README.md"
categories = ["api-bindings", "science"]
keywords = ["linear-algebra"]

[dependencies]
lapacke-sys = "0.1.4"
libc = "0.2.81"
num-complex = { version = "0.3.1", default-features = false }
